# dearsql

./: .gitignore  .gitmodules  APP_METADATA  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: linux-test.yml  linux.yml  windows.yml
assets/shaders/: sample.glsl
cmake/: AppMetadata.cmake  CassandraDriver.cmake  EmbedResources.cmake  FreeTDS.cmake  HsqlParser.cmake  Imgui.cmake  OracleOCI.cmake  Sparkle.cmake  Tests.cmake  TreeSitterGrammars.cmake  WinSparkle.cmake  msvc_cassandra_sparsehash_compat.hpp
cmake/triplets/: arm64-osx.cmake  x64-linux.cmake  x64-windows-static.cmake
include/: app_state.hpp  application.hpp  config.hpp.in  themes.hpp
include/ai/: ai_chat.hpp
include/database/: async_helper.hpp  cassandra.hpp  connection_pool.hpp  connection_url.hpp  database_node.hpp  db.hpp  db_interface.hpp  ddl_utils.hpp  oracle.hpp  redis.hpp  sql_builder.hpp  sqlite.hpp  ssh_tunnel.hpp  ssl_config.hpp  table_data_provider.hpp
include/database/cassandra/: cassandra_database_node.hpp
include/database/mongodb/: mongodb_database_node.hpp
include/database/mssql/: mssql_database_node.hpp  mssql_schema_node.hpp
include/database/mysql/: mysql_database_node.hpp  mysql_internal.hpp
include/database/oracle/: oracle_client_installer.hpp  oracle_database_node.hpp  oracle_fwd.hpp
include/database/postgres/: postgres_backup.hpp  postgres_database_node.hpp  postgres_schema_node.hpp
include/license/: license_manager.hpp
include/platform/: graphics_backend.hpp  linux_platform.hpp  macos_platform.hpp  opengl_texture.hpp  titlebar.hpp  updater.hpp  windows_platform.hpp  windows_updater.hpp
include/ui/: auto_complete_input.hpp  connection_dialog.hpp  create_database_dialog.hpp  custom_shader.hpp  database_node.hpp  datetime_picker.hpp  db_sidebar.hpp  input_dialog.hpp  query_history.hpp  settings_dialog.hpp  tab_manager.hpp  table_aurora_shader.hpp  table_renderer.hpp  text_editor.hpp
include/ui/tab/: csv_editor_tab.hpp  diagram_tab.hpp  mongo_editor_tab.hpp  postgres_sequence_viewer_tab.hpp  redis_editor_tab.hpp  redis_key_viewer_tab.hpp  routine_viewer_tab.hpp  sql_editor_tab.hpp  sqlite_sequence_viewer_tab.hpp  tab.hpp  table_editor_tab.hpp  table_viewer_tab.hpp
include/utils/: csv_parser.hpp  file_dialog.hpp  process_runner.hpp  sentry_utils.hpp  table_exporter.hpp  table_importer.hpp
packaging/windows/: DearSQL.wxs  License.rtf
scripts/: build  build-mac  build-msi.ps1  build-windows.ps1  run-tests
src/: app_state.cpp  application.cpp  main.cpp
src/ai/: ai_chat.cpp  ai_client.cpp
src/database/: cassandra.cpp  connection_url.cpp  db_factory.cpp  ddl_builder.cpp  mongodb.cpp  mssql.cpp  mysql.cpp  oracle.cpp  postgresql.cpp  redis.cpp  sql_builder.cpp  sqlite.cpp  ssh_tunnel.cpp
src/database/cassandra/: cassandra_database_node.cpp
src/database/mongodb/: mongodb_database_node.cpp
src/database/mssql/: mssql_database_node.cpp  mssql_schema_node.cpp  mssql_utils.hpp
src/database/mysql/: mysql_database_node.cpp  mysql_internal.cpp
src/database/oracle/: oracle_client_installer.cpp  oracle_database_node.cpp  oracle_utils.hpp
src/database/postgres/: postgres_backup.cpp  postgres_database_node.cpp  postgres_schema_node.cpp
src/license/: license_manager.cpp
src/platform/: dx11_backend.cpp  linux_connection_dialog.cpp  linux_input_dialog.cpp  linux_platform.cpp  linux_titlebar.cpp  linux_updater.cpp  macos_alert.mm  macos_connection_dialog.mm  macos_input_dialog.mm  macos_platform.mm  macos_titlebar.mm  macos_updater.mm  metal_backend.mm  opengl_backend.cpp  posix_ssh_tunnel.cpp  windows_alert.cpp  windows_connection_dialog.cpp  windows_input_dialog.cpp  windows_platform.cpp  windows_ssh_tunnel.cpp  windows_titlebar.cpp  windows_updater.cpp
src/ui/: ai_chat_panel.cpp  ai_settings_dialog.cpp  auto_complete_input.cpp  connection_dialog.cpp  create_database_dialog.cpp  custom_shader.mm  database_node.cpp  datetime_picker.cpp  db_sidebar.cpp  query_history.cpp  settings_dialog.cpp  tab_manager.cpp  table_aurora_shader.mm  table_renderer.cpp  text_editor.cpp  text_editor_format.cpp  text_editor_highlight.cpp  text_editor_input.cpp
src/ui/tab/: csv_editor_tab.cpp  diagram_tab.cpp  mongo_editor_tab.cpp  postgres_sequence_viewer_tab.cpp  redis_editor_tab.cpp  redis_key_viewer_tab.cpp  redis_pubsub_tab.cpp  redis_status_panel.cpp  routine_viewer_tab.cpp  sql_editor_tab.cpp  sqlite_sequence_viewer_tab.cpp  tab.cpp  table_editor_tab.cpp  table_viewer_tab.cpp
src/utils/: crypto.cpp  file_dialog.cpp  process_runner.cpp  spinner.cpp  table_exporter.cpp  table_importer.cpp  texture_manager.cpp
tests/database/: cassandra_database_test.cpp  connection_url_test.cpp  mssql_database_test.cpp  mysql_database_test.cpp  oracle_database_test.cpp  postgres_database_test.cpp  sql_builder_test.cpp  sqlite_database_test.cpp  ssh_tunnel_test.cpp  ssl_connection_test.cpp
tests/ui/: csv_parser_test.cpp  sql_format_test.cpp
